--- a/app/src/main/res/layout/hot_handicap_include.xml
+++ b/app/src/main/res/layout/hot_handicap_include.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/margin_30"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <ImageView
@@ -51,6 +50,7 @@
             android:layout_height="wrap_content"/>
     </LinearLayout>
     <LinearLayout
+        android:id="@+id/ll_hot_handicap_more"
         app:layout_constraintTop_toTopOf="@+id/iv_logo_handicap"
         app:layout_constraintBottom_toBottomOf="@+id/iv_logo_handicap"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,22 +71,13 @@
             android:layout_width="@dimen/margin_14"
             android:layout_height="wrap_content"/>
     </LinearLayout>
-    <androidx.cardview.widget.CardView
-        app:cardCornerRadius="@dimen/margin_10"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginHorizontal="@dimen/margin_14"
-        android:layout_marginTop="@dimen/margin_10"
 
-        app:layout_constraintTop_toBottomOf="@+id/ll_hot_arrow"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
        <androidx.recyclerview.widget.RecyclerView
-           android:paddingBottom="@dimen/margin_20"
+           android:layout_marginHorizontal="@dimen/margin_14"
+           app:layout_constraintTop_toBottomOf="@+id/ll_hot_arrow"
+           android:paddingBottom="@dimen/margin_30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="2"
            tools:listitem="@layout/item_hot_handicap"/>
-
-    </androidx.cardview.widget.CardView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
