--- a/app/src/main/res/layout/hot_live_match_include.xml
+++ b/app/src/main/res/layout/hot_live_match_include.xml
@@ -29,6 +29,7 @@
         app:layout_constraintTop_toTopOf="@+id/iv_logo_handicap" />
 
     <LinearLayout
+        android:id="@+id/ll_hot_live_more"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -37,7 +38,7 @@
         app:layout_constraintTop_toTopOf="@+id/iv_logo_handicap">
 
         <TextView
-            android:id="@+id/tv_find_more"
+            android:id="@+id/tv_hot_find_more"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/margin_5"
