--- a/app/src/main/res/layout/view_status_spinner.xml
+++ b/app/src/main/res/layout/view_status_spinner.xml
@@ -23,8 +23,8 @@
 
     <ImageView
         android:id="@+id/iv_arrow"
-        android:layout_width="12dp"
-        android:layout_height="12dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="8dp"
         android:src="@drawable/ic_arrow_gray"
         app:layout_constraintBottom_toBottomOf="@id/tv_name"
