--- a/app/src/main/res/layout/item_home_live.xml
+++ b/app/src/main/res/layout/item_home_live.xml
@@ -20,7 +20,8 @@
             android:layout_width="match_parent"
             android:layout_height="200dp">
 
-            <ImageView
+            <com.pili.pldroid.player.widget.PLVideoView
+                android:id="@+id/video_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@color/transparent_black_40" />
