1.首页接口以及逻辑处理

--- a/app/src/main/res/layout/item_hot_handicap.xml
+++ b/app/src/main/res/layout/item_hot_handicap.xml
@@ -95,6 +95,7 @@
          </LinearLayout>
       </androidx.constraintlayout.widget.ConstraintLayout>
       <androidx.recyclerview.widget.RecyclerView
+          android:id="@+id/rv_handicap_item"
          app:layout_constraintTop_toBottomOf="@+id/cl_title"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
