--- a/app/src/main/res/layout/fragment_main_home.xml
+++ b/app/src/main/res/layout/fragment_main_home.xml
@@ -136,6 +136,7 @@
             android:layout_height="wrap_content"/>
         <TextView
             android:id="@+id/tv_come_back"
+            android:text="@string/go_back_top"
             android:drawablePadding="-6dp"
             android:textColor="@color/color_181922_FFFFFF"
             android:layout_width="wrap_content"
