--- a/app/src/main/res/layout/fragment_bet_receipt.xml
+++ b/app/src/main/res/layout/fragment_bet_receipt.xml
@@ -227,22 +227,36 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <FrameLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/margin_14"
             android:background="@drawable/bg_gradient_bet_total">
 
             <TextView
+                android:id="@+id/btn_cancel"
+                android:layout_width="100dp"
+                android:layout_height="@dimen/bet_button_height"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/bg_radius_8_bet_delete"
+                android:gravity="center"
+                android:text="@string/btn_cancel"
+                android:textColor="@color/color_E23434"
+                android:textSize="@dimen/textSize16sp"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+            <TextView
                 android:id="@+id/btn_complete"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/bet_button_height"
+                android:layout_weight="1"
                 android:background="@drawable/button_radius_8_bet_button"
                 android:gravity="center"
                 android:text="@string/btn_sure"
                 android:textColor="@color/color_E8EFFD"
                 android:textSize="@dimen/textSize16sp" />
-        </FrameLayout>
+        </LinearLayout>
 
     </LinearLayout>
     </LinearLayout>
