--- a/app/src/main/res/layout/item_home_live.xml
+++ b/app/src/main/res/layout/item_home_live.xml
@@ -27,6 +27,12 @@
                 android:src="@color/transparent_black_40" />
 
             <ImageView
+                android:id="@+id/iv_cover"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY" />
+
+            <ImageView
                 android:id="@+id/iv_live_sound"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
@@ -78,14 +84,19 @@
             android:paddingHorizontal="10dp"
             android:paddingVertical="5dp">
 
-            <ImageView
-                android:id="@+id/tv_anchor_avatar"
+            <com.makeramen.roundedimageview.RoundedImageView
+                android:id="@+id/iv_anchor_avatar"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/ic_person_avatar" />
+                android:layout_centerVertical="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_person_avatar"
+                app:riv_border_color="@color/color_FFFFFF"
+                app:riv_border_width="@dimen/margin_1"
+                app:riv_oval="true" />
 
             <TextView
-                android:id="@+id/tv_league_name"
+                android:id="@+id/tv_anchor_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
