--- a/app/src/main/res/layout/item_home_elec.xml
+++ b/app/src/main/res/layout/item_home_elec.xml
@@ -1,35 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/bg_white_stroke_blue_radius_8"
-    android:padding="1dp"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="0dp">
+    android:orientation="vertical"
+    android:background="@drawable/bg_white_stroke_blue_radius_8">
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@color/color_2b2b2b_ffffff">
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/margin_1"
+        android:elevation="0dp"
+        app:cardBackgroundColor="@color/transparent"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="0dp">
 
-        <ImageView
-            android:id="@+id/iv_logo"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/bg_game_elec"
-            android:adjustViewBounds="true" />
+            android:orientation="vertical"
+            android:background="@color/color_2b2b2b_ffffff">
 
-        <TextView
-            android:id="@+id/tv_game_name"
-            android:layout_width="match_parent"
-            android:layout_height="33dp"
-            android:gravity="center"
-            android:background="@drawable/bg_gadient_blue_white"
-            android:textSize="14sp"
-            android:textColor="@color/color_414655"
-            android:text="淘金者" />
-    </LinearLayout>
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-</androidx.cardview.widget.CardView>
+                <ImageView
+                    android:id="@+id/bg_logo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/bg_game_elec"
+                    android:adjustViewBounds="true" />
+
+                <ImageView
+                    android:id="@+id/iv_logo"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="20dp"
+                    android:layout_gravity="center" />
+            </FrameLayout>
+
+            <TextView
+                android:id="@+id/tv_game_name"
+                android:layout_width="match_parent"
+                android:layout_height="33dp"
+                android:gravity="center"
+                android:background="@drawable/bg_gadient_blue_white"
+                android:textSize="14sp"
+                android:textColor="@color/color_414655"
+                android:text="淘金者" />
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+</LinearLayout>
