--- a/app/src/main/res/layout/item_poker_game.xml
+++ b/app/src/main/res/layout/item_poker_game.xml
@@ -9,8 +9,8 @@
         android:id="@+id/iv_poker_bg"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="176dp"
+        android:layout_height="139dp"
         tools:src="@drawable/ic_poker_item"/>
     <TextView
         android:id="@+id/tv_poker_name"
