--- a/app/src/main/res/layout/view_status_spinner.xml
+++ b/app/src/main/res/layout/view_status_spinner.xml
@@ -3,21 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cl_root"
-    android:layout_width="match_parent"
-    android:layout_height="44dp"
+
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     tools:context=".ui.component.StatusSelectorView"
     tools:background="@drawable/frame_color_silver_light_stroke">
 
     <TextView
+       android:paddingStart="@dimen/margin_6"
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:ellipsize="end"
-        android:gravity="center"
         android:singleLine="true"
         android:textColor="@color/color_79839F_6C7BA8"
-        android:textSize="@dimen/textSize14sp"
-       app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="@dimen/textSize12sp"
         app:layout_constraintStart_toStartOf="parent"
         tools:text="@string/all_order_status" />
 
