--- a/app/src/main/res/layout/fragment_home_slot.xml
+++ b/app/src/main/res/layout/fragment_home_slot.xml
@@ -22,6 +22,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_slot"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="15dp" />
+        android:layout_height="match_parent"
+        tools:itemCount="3"
+        tools:listitem="@layout/item_home_slot" />
 </LinearLayout>
