--- a/app/src/main/res/layout/item_home_elec.xml
+++ b/app/src/main/res/layout/item_home_elec.xml
@@ -18,13 +18,14 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:background="@color/color_2b2b2b_ffffff">
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="0dp"
+                android:layout_weight="1">
 
                 <ImageView
                     android:id="@+id/bg_logo"
