--- a/app/src/main/res/layout/item_home_slot.xml
+++ b/app/src/main/res/layout/item_home_slot.xml
@@ -1,48 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:layout_width="wrap_content"
-    tools:layout_height="wrap_content"
-    tools:ignore="ContentDescription, SpUsage">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginHorizontal="@dimen/margin_15"
+    android:layout_marginTop="@dimen/margin_12"
+    app:cardElevation="2dp"
+    app:cardCornerRadius="10dp">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
+    <ImageView
+        android:id="@+id/iv_bg"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_margin="@dimen/margin_5"
-        app:cardBackgroundColor="@color/transparent"
-        app:cardElevation="2dp"
-        app:cardCornerRadius="10dp">
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"
+        android:src="@drawable/bg_card_game" />
 
-        <ImageView
-            android:id="@+id/iv_bg"
-            android:layout_width="wrap_content"
-            android:layout_height="160dp"
-            android:scaleType="fitXY"
-            android:adjustViewBounds="true"
-            android:src="@drawable/bg_card_game" />
 
-        <ImageView
-            android:id="@+id/iv_people"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginHorizontal="5dp"
-            android:elevation="@dimen/margin_3"
-            android:layout_gravity="right"
-            android:adjustViewBounds="true"
-            android:src="@drawable/ic_game_01" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:layout_gravity="center_vertical"
             android:orientation="vertical"
             android:gravity="center_vertical"
             android:elevation="@dimen/margin_4"
-            android:layout_marginHorizontal="20dp">
+            android:paddingLeft="30dp">
 
             <TextView
                 android:id="@+id/tv_firm_name"
@@ -88,9 +76,17 @@
                 android:textSize="14sp"
                 android:text="@string/comingsoon" />
 
-
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
 
+        <ImageView
+            android:id="@+id/iv_people"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_margin="5dp"
+            android:elevation="@dimen/margin_3"
+            android:adjustViewBounds="true"
+            android:src="@drawable/ic_game_01" />
+    </LinearLayout>
 
-</FrameLayout>
+</androidx.cardview.widget.CardView>
