--- a/app/src/main/res/layout/fragment_home_elec.xml
+++ b/app/src/main/res/layout/fragment_home_elec.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fitsSystemWindows="true"
     android:background="@color/background"
     android:orientation="vertical">
@@ -240,7 +241,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="15dp"
-            tools:itemCount="3"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:spanCount="3"
+            tools:itemCount="6"
             tools:listitem="@layout/item_home_elec" />
     </LinearLayout>
 </LinearLayout>
