--- a/app/src/main/res/layout/hot_live_match_include.xml
+++ b/app/src/main/res/layout/hot_live_match_include.xml
@@ -38,7 +38,7 @@
         app:layout_constraintTop_toTopOf="@+id/iv_logo_handicap">
 
         <TextView
-            android:id="@+id/tv_hot_find_more"
+            android:id="@+id/tv_hot_live_find_more"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/margin_5"
@@ -190,8 +190,8 @@
             app:layout_constraintTop_toBottomOf="@+id/view">
 
             <androidx.recyclerview.widget.RecyclerView
-                android:layout_marginStart="@dimen/margin_5"
                 android:id="@+id/rv_match_list"
+                android:layout_marginStart="@dimen/margin_5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_10"
