--- a/app/src/main/res/layout/hot_live_match_include.xml
+++ b/app/src/main/res/layout/hot_live_match_include.xml
@@ -125,7 +125,7 @@
 
         <ImageView
             android:id="@+id/iv_live_type"
-            android:layout_width="114dp"
+            android:layout_width="110dp"
             android:layout_height="96dp"
             android:layout_marginStart="65dp"
             android:scaleType="fitXY"
@@ -201,8 +201,8 @@
 
         <ImageView
             android:id="@+id/iv_avatar_live"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/margin_28"
+            android:layout_height="@dimen/margin_28"
             android:layout_marginStart="@dimen/margin_24"
             android:layout_marginTop="@dimen/margin_12"
             app:layout_constraintStart_toStartOf="parent"
