--- a/app/src/main/res/layout/view_detail_head_toolbar.xml
+++ b/app/src/main/res/layout/view_detail_head_toolbar.xml
@@ -28,6 +28,11 @@
         app:layout_constraintDimensionRatio="3:2"
         android:orientation="vertical">
 
+        <View
+            android:id="@+id/v_statusbar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/margin_25" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/tool_bar_height"
