--- a/app/src/main/res/layout/view_toolbar_detail_live.xml
+++ b/app/src/main/res/layout/view_toolbar_detail_live.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fl_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_000000"
-    android:orientation="vertical"
-    tools:ignore="UseAppTint">
+    android:orientation="vertical">
 
+    <View
+        android:id="@+id/v_statusbar_live"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/margin_25" />
+
+    <FrameLayout
+        android:id="@+id/fl_root"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/color_000000"
+        android:orientation="vertical"
+        tools:ignore="UseAppTint">
 
         <RelativeLayout
             android:id="@+id/web_view_layout"
@@ -53,49 +62,51 @@
         </RelativeLayout>
 
 
-    <LinearLayout
-        android:id="@+id/cl_control"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:padding="10dp"
-        android:layout_gravity="right"
-        android:gravity="center"
-        android:orientation="vertical">
+        <LinearLayout
+            android:id="@+id/cl_control"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:padding="10dp"
+            android:layout_gravity="right"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/iv_animation"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_anime_trans"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+            <ImageView
+                android:id="@+id/iv_video"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="20dp"
+                android:src="@drawable/ic_video_trans"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+            <ImageView
+                android:id="@+id/iv_live"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="20dp"
+                android:src="@drawable/ic_live_trans"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+        </LinearLayout>
 
         <ImageView
-            android:id="@+id/iv_animation"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/ic_anime_trans"
-            android:visibility="gone"
-            tools:visibility="visible" />
+            android:id="@+id/iv_fullscreen"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_gravity="bottom|right"
+            android:layout_margin="@dimen/margin_15"
+            android:padding="@dimen/margin_5"
+            android:src="@drawable/selector_fullscreen" />
 
-        <ImageView
-            android:id="@+id/iv_video"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="20dp"
-            android:src="@drawable/ic_video_trans"
-            android:visibility="gone"
-            tools:visibility="visible" />
-
-        <ImageView
-            android:id="@+id/iv_live"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="20dp"
-            android:src="@drawable/ic_live_trans"
-            android:visibility="gone"
-            tools:visibility="visible" />
-
-    </LinearLayout>
-
-    <ImageView
-        android:id="@+id/iv_fullscreen"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_gravity="bottom|right"
-        android:layout_margin="@dimen/margin_15"
-        android:padding="@dimen/margin_5"
-        android:src="@drawable/selector_fullscreen" />
-</FrameLayout>
+    </FrameLayout>
+</LinearLayout>
